// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders with custom level 1`] = `
<header
  aria-level="1"
  className="hXMYMY"
  role="heading"
>
  <span
    className="dSCYBL yROTA"
    style={Object {}}
  >
    <div
      className="zaQxq"
    >
      <div
        className="kFBBeh"
      >
        <h1
          className="icfhLg"
          color="blue"
          size={
            Object {
              "large": "bronto",
              "medium": "zetta",
              "small": "tera",
            }
          }
        >
          <span
            className="gzlGrX"
          >
            Generic
          </span>
           
          <span
            className="beMIhb"
          >
            Header
          </span>
        </h1>
      </div>
    </div>
  </span>
</header>
`;

exports[`Header renders with default 1`] = `
<header
  aria-level="1"
  className="hXMYMY"
  role="heading"
>
  <span
    className="dSCYBL yROTA"
    style={Object {}}
  >
    <div
      className="zaQxq"
    >
      <div
        className="kFBBeh"
      >
        <h2
          className="jZEkVf"
          size={
            Object {
              "large": "bronto",
              "medium": "zetta",
              "small": "tera",
            }
          }
        >
          <span
            className="gzlGrX"
          >
            Generic
          </span>
           
          <span
            className="beMIhb"
          >
            Header
          </span>
        </h2>
      </div>
    </div>
  </span>
</header>
`;

exports[`Header renders withOverlay 1`] = `
<header
  aria-level="1"
  className="hXMYMY"
  role="heading"
>
  <span
    className="gradient--overlay dSCYBL yROTA"
    style={Object {}}
  >
    <div
      className="zaQxq"
    >
      <div
        className="kFBBeh"
      >
        <h2
          className="jZEkVf"
          size={
            Object {
              "large": "bronto",
              "medium": "zetta",
              "small": "tera",
            }
          }
        >
          <span
            className="gzlGrX"
          >
            Generic
          </span>
           
          <span
            className="beMIhb"
          >
            Header
          </span>
        </h2>
      </div>
    </div>
  </span>
</header>
`;
